<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference 
            	android:title="@string/pref_ip_address" 
            	android:summary="@string/pref_ip_address_summary" 
            	android:key="prefIpAddress"/>
        <EditTextPreference 
            	android:title="@string/pref_port_address" 
            	android:summary="@string/pref_port_address_summary" 
            	android:key="prefPortAddress"/>
    
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefWifiState"
            android:summary="@string/pref_wifi_state_summary"
            android:title="@string/pref_wifi_state" >
        </CheckBoxPreference>

      <!--   <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary" 
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />--> 
    </PreferenceCategory>

</PreferenceScreen>